--- a/popwindow/src/main/res/layout/pop_pp_bottom.xml
+++ b/popwindow/src/main/res/layout/pop_pp_bottom.xml
@@ -14,7 +14,7 @@
         android:textColor="#000"
         android:text="版本更新"
         android:background="@drawable/pop_bottom_text"
-        android:layout_margin="10dp"/>
+        android:padding="10dp"/>
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
@@ -29,7 +29,7 @@
         android:textColor="#000"
         android:text="反馈"
         android:background="@drawable/pop_bottom_text"
-        android:layout_margin="10dp"/>
+        android:padding="10dp"/>
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
@@ -44,7 +44,7 @@
         android:textColor="#000"
         android:text="退出"
         android:background="@drawable/pop_bottom_text"
-        android:layout_margin="10dp"/>
+        android:padding="10dp"/>
 
     <View
         android:layout_width="match_parent"
@@ -60,5 +60,5 @@
         android:textColor="#000"
         android:text="取消"
         android:background="@drawable/pop_bottom_text"
-        android:layout_margin="10dp"/>
+        android:padding="10dp"/>
 </LinearLayout>
